[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
PyJWT = "^2.4.0"
psycopg2-binary = "^2.8.6"
passlib = "^1.7.4"
requests = "^2.25.0"
SQLAlchemy = "^1.3.20"
uvicorn = "^0.13.1"
pytest = "^6.2.0"
aiounittest = "^1.4.0"
importlib-metadata = "^3.3.0"

[tool.poetry.scripts]
auth-service = "uvicorn main:app --reload --host 0.0.0.0 --port 8080"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
