[tool.poetry]
name = "ml-core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.9"
fastapi = "^0.62.0"
pandas = "^1.1.5"
psycopg2-binary = "^2.8.6"
passlib = "^1.7.4"
pymongo = "^3.11.2"
pytest = "^6.2.1"
PyStemmer = "^2.0.1"
imbalanced-learn = "0.4.2"
redis = "^3.5.3"
requests = "^2.25.0"
scikit-learn = "^0.20.4"
SQLAlchemy = "^1.3.20"
uvicorn = "^0.13.1"
six = "1.15.0"
typing-extensions = "^3.7.4"
importlib-metadata = "^3.3.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
